<resources>

    <string name="intro_text_one">Welcome to the realm of Simultanea! This realm is divided into the three worlds: Xelvana, Yhondyrr, and Zhiole.</string>
    <string name="intro_text_two">Xelvana, the divine land of the skys. Home to the heavenly beings who feel they have the need to oversee other life in the realm.</string>
    <string name="intro_text_three">Yhondyrr, the world of plenty. Different races, different faces, different places, and resources can be found in this bountiful world. But with that bountifulness comes diversity. Both sides of the coin of good and evil can be found here.</string>
    <string name="intro_text_four">Zhiole, the barren prison. Dwelling place of fallen Xelvanians, and Yhondyrrians. The prison world houses the worst of the worst of criminals and fiends.</string>
    <string name="intro_text_five">The three worlds collide when World Warp Portals appear around the world, tethering them to one another.</string>
    <string name="intro_text_six">Will Xelvana be capable of maintaining the order between the three worlds?</string>
    <string name="intro_text_seven">With the possible return of its banished people, and considering the untrodden portal phenomena; what would happen to Yhondyrr?</string>
    <string name="intro_text_eight">What kind of havoc would the denizens of Zhiole wreak around the realm; will the other worlds find a way to contain them securely?</string>
    <string name="intro_text_nine">Interact, learn, and explore to know what befalls the Realm of Simultanea.</string>

    <string name="instruction_profile_button">This button takes you to your Player Profile Page.\n\nHere you will find your high score, games played, currently selected character, and many more information.</string>
    <string name="instruction_settings_button">This button takes you to the Settings Page.\n\nHere you are able to set your Player Name, and toggle whether you would like to play as a Task Master or as a Regular Player.</string>
    <string name="instruction_characters_button">This button takes you to the Characters Page.\n\nHere you will be able to select your Game Avatar, and view the different lore and stats of each character.</string>
    <string name="instruction_play_button">This button takes you to the Game Lobby.\n\nHere you will be able to choose your game mode: Single Player, Multiplayer, or check instruction for playing the game.</string>


    <string name="app_name">Simultanea</string>
    <string name="preference_file_key">preferences</string>

    <string name="answer_correct">Correct!</string>
    <string name="answer_incorrect">Incorrect!</string>

    <string name="bluepanda_name">Angelic Panda</string>
    <string name="redpanda_name">Malevolent Panda</string>
    <string name="dueliest_name">Duelist</string>
    <string name="pumpkin_name">Pumpkin Sorceror</string>
    <string name="warrior_name">Warrior</string>

    <string name="siren_name">Siren</string>
    <string name="minotaur_name">Minotaur</string>
    <string name="cyclops_name">Cyclops</string>

    <string name="skeleton_name">Skeleton</string>
    <string name="goblin_name">Goblin</string>
    <string name="slime_name">Slime</string>

    <string name="msg_stats">Heal: %1$d\nRecovery:%2$d\nAttack:%3$d\nDefense:%4$d</string>
    <string name="mob_msg_stats">Heal: %1$d\nRecovery:%2$d\nAttack:%3$d\nDefense:%4$d</string>
    <!--<string name="mob_msg_stats">Attack:%1$d\nDefense:%2$d</string>-->

    <string name="Warrior_Lore">Brutus - The Abyssal Barbarian.\n\nAn entity from a land unknown. Found unconscious by a group of barbarian warriors.\nHaving lost his memories, he does not remember where he came from, what he really is, and what his name was. Accepted as one of their own, the barbarians gave him the name Brutus. He wields a large shield and a battle axe.</string>
    <string name="Duelist_Lore">Eve - The Silver Assassin\n\nA Midland commoner. With no family around, she grew up by herself on the streets.\nHer family died in the war between the Land Above and Down Under.\nShe is skilled in acrobatics and wields two silver-plated daggers.</string>
    <string name="BluePanda_Lore">Pandgeal - The Divine Panda Mage\n\nOne of the several Panda Mages descended from the Land Above to bring peace to Midland.\nAfter witnessing the death of his fellow Panda Mages, he decided to stay in Midland to seek vengeance - to hunt for the mysterious Red Panda that betrayed them.\nHe wields a staff made of bamboo, imbued with divine energy.</string>
    <string name="RedPanda_Lore">Pandren - The Traitorous Panda Mage\n\nBetrayed the Panda Army during the Xelvana-Zhiole War.</string>
    <string name="Pumpkin_Lore">Jack - The Malevolent Pumpkin Sorcerer\n\nThe spirit belonged to an evil sorcerer that was taken to Down Under after committing regicide.\nJack utilizes the dark magic he had studied before his fall.</string>

    <string name="Siren_Lore">Arhyll - The Deceptive Sea Nymph</string>
    <string name="Minotaur_Lore">Vyrnus - The Furious Minotaur</string>
    <string name="Cyclops_Lore">Monoptyk - The One Eyed Monster</string>

    <string name="Skeleton_Description">One of the many skeletal bodies.</string>
    <string name="Goblin_Description">One of the many goblin raiders.</string>
    <string name="Slime_Description">A sentient gelatinous creature possessing a human skull.</string>

    <string name="error_missing_permissions">Cannot start without required permissions.</string>

    <string name="multiPlayerMaster">Act as the Multiplayer Host</string>
    <string name="waiting_for_players">Waiting for players...</string>
    <string name="start_game">Start Game</string>

    <string name="battle">Battle</string>
    <string name="answers">Answers</string>
    <string name="question">Question</string>
    <string name="defend">Defend</string>
    <string name="attack">Attack</string>
    <string name="heal">Heal</string>

    <string name="waiting_for_master">Waiting for taskmaster</string>
    <string name="on_advertising_failed">Failed to start advertising.</string>
    <string name="connection_failed">Connection to %s failed!</string>
    <string name="question_category_any">Any Category</string>
    <string name="single_player_game">Single Player Game</string>
    <string-array name="question_difficulty_array">
        <item>Any Difficulty</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="question_type_array">
        <item>Any Type</item>
        <item>Multiple Choice</item>
        <item>True / False</item>
    </string-array>
</resources>
