<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/battle"
    tools:context="com.sombright.vizix.simultanea.PlayActivitySingle"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/levelDisplayHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/otherPlayersLayout"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Level: " />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentLevelInt"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/localPlayerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/otherPlayersLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <ImageView
            android:id="@+id/imageViewLocalPlayer"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:adjustViewBounds="true"
            tools:srcCompat="@drawable/pump" />

        <TextView
            android:id="@+id/textViewLocalPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Name" />

        <ProgressBar
            android:id="@+id/localPlayerHealth"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:progress="100" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/abilityPointsDisplayHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/otherPlayersLayout"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ability Points: " />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/abilityPointsInt"
            />


    </LinearLayout>

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/otherPlayersLayout"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:numColumns="4"
        app:layout_constraintBottom_toTopOf="@id/contentsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/localPlayerLayout" />

    <FrameLayout
        android:id="@+id/contentsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/controlsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/controlsLayout"
        app:layout_constraintTop_toBottomOf="@id/otherPlayersLayout">

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#cc000000"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/answersLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/answer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <Button
                android:id="@+id/answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <Button
                android:id="@+id/answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <Button
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/battleOptionsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="showBattleOptions"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/buttonHeal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonHealClicked"
                android:text="@string/heal" />

            <Button
                android:id="@+id/buttonAttack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonAttackClicked"
                android:text="@string/attack" />

            <Button
                android:id="@+id/buttonDefend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonDefendClicked"
                android:text="@string/defend" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/controlsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonQuestion"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="showQuestion"
                android:text="@string/question" />

            <Button
                android:id="@+id/buttonAnswers"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="showAnswers"
                android:text="@string/answers" />

            <Button
                android:id="@+id/buttonBattle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="showBattleOptions"
                android:text="@string/battle" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/counter"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="100" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar5"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="parent"
        tools:layout_editor_absoluteX="335dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>
