<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/battle"
    tools:context="com.sombright.vizix.simultanea.PlayActivityMulti"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/localPlayerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/otherPlayersLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <ImageView
            android:id="@+id/imageViewLocalPlayer"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/pump" />

        <TextView
            android:id="@+id/textViewLocalPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Name" />

        <ProgressBar
            android:id="@+id/Counter"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="100" />

    </LinearLayout>

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/otherPlayersLayout"
        android:layout_width="0dp"
        android:layout_height="372dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:numColumns="4"
        app:layout_constraintBottom_toTopOf="@id/contentsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/localPlayerLayout" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/contentsLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:barrierAllowsGoneWidgets="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/controlsLayout"
        app:layout_constraintTop_toBottomOf="@id/otherPlayersLayout">

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#cc000000"
            android:gravity="center"
            android:textSize="12sp" />


        <Button
            android:id="@+id/answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <Button
            android:id="@+id/answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <Button
            android:id="@+id/answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <Button
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />


        <Button
            android:id="@+id/buttonHeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonHealClicked"
            android:text="@string/heal" />

        <Button
            android:id="@+id/buttonAttack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonAttackClicked"
            android:text="@string/attack" />

        <Button
            android:id="@+id/buttonDefend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonDefendClicked"
            android:text="@string/defend" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="48dp" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/controlsLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/contentsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/contentsLayout">

        <Button
            android:id="@+id/buttonQuestion"
            android:layout_width="150dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:onClick="showQuestion"
            android:background="@drawable/qbutton"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonAnswers"
            android:layout_width="150dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:onClick="showAnswers"
            android:background="@drawable/abutton"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonBattle"
            android:layout_width="150dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:onClick="showBattleOptions"
            android:background="@drawable/attackb"
            android:visibility="gone" />
    </LinearLayout>

    <ImageView
        android:id="@+id/leftAnimation"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/otherPlayersLayout"
        app:layout_constraintEnd_toStartOf="@+id/rightAnimation"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localPlayerLayout"
        app:srcCompat="@drawable/pump"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/rightAnimation"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/otherPlayersLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leftAnimation"
        app:layout_constraintTop_toBottomOf="@+id/localPlayerLayout"
        app:srcCompat="@drawable/war"
        tools:visibility="visible" />

</android.support.constraint.ConstraintLayout>
